--- a/index.html
+++ b/index.html
@@ -1,65 +1,32 @@
-<script src="https://checkout.flutterwave.com/v3.js"></script>
-<div id="payment-failed">
-  Uh-oh. Please try again, or contact support if you're encountering difficulties making payment.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://checkout.flutterwave.com/v3.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <title>Document</title>
+</head>
+<body>
+  <script src="https://checkout.flutterwave.com/v3.js"></script>
+<div class="container mt-4">
+  <h1>Please Donate To the Ministry</h1>
+  <br>
+  <form>
+  
+      <div class="form-group">
+        <label for="amount">Amount (UGX)</label>
+        <input required type="number" name="amount" id="amount" class="form-control" placeholder="3000">
+      </div>
+      <div class="form-group">
+        <label for="amount">Phone Number</label>
+        <input required type="text" name="phone_number" id="phone_number" class="form-control" placeholder="0708898845">
+      </div>
+    <button type="submit" class="start-payment-button btn btn-primary">Pay Now</button>
+  </form>
 </div>
-<br>
-<form>
-  <div>
-    Your order is ₦54,600
-  </div>
-  <button type="button" class="start-payment-button" onclick="makePayment()">Pay Now</button>
-</form>
-<div id="payment-success">
-  Thank you! Enjoy your awesome cruise.🚢
-</div>
-<div id="payment-pending">
-  Verifying...Setting up your cruise🚢
-</div>
-<script>
-  function makePayment() {
-    FlutterwaveCheckout({
-      public_key: "FLWPUBK-692f1f62e20941cea3dd22aaf2dec9aa-X",
-      tx_ref: "titanic-48981487343MDI0NzMx",
-      amount: 54600,
-      currency: "UGX",
-      payment_options: "card, mobilemoneyuganda, banktransfer",
-      callback: function(payment) {
-        // Send AJAX verification request to backend
-        verifyTransactionOnBackend(payment.id);
-      },
-      onclose: function(incomplete) {
-        if (incomplete || window.verified === false) {
-          document.querySelector("#payment-failed").style.display = 'block';
-        } else {
-          document.querySelector("form").style.display = 'none';
-          if (window.verified == true) {
-            document.querySelector("#payment-success").style.display = 'block';
-          } else {
-            document.querySelector("#payment-pending").style.display = 'block';
-          }
-        }
-      },
-      meta: {
-        consumer_id: 23,
-        consumer_mac: "92a3-912ba-1192a",
-      },
-      customer: {
-        email: "rose@unsinkableship.com",
-        phone_number: "08102909304",
-        name: "Rose DeWitt Bukater",
-      },
-      customizations: {
-        title: "The Titanic Store",
-        description: "Payment for an awesome cruise",
-        logo: "https://www.logolynx.com/images/logolynx/22/2239ca38f5505fbfce7e55bbc0604386.jpeg",
-      },
-    });
-  }
-
-  function verifyTransactionOnBackend(transactionId) {
-    // Let's just pretend the request was successful
-    setTimeout(function() {
-      window.verified = true;
-    }, 200);
-  }
+<script src="index.js">
 </script>
+</body>
+</html>
