--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <label for="amount">Phone Number</label>
         <input required type="text" name="phone_number" id="phone_number" class="form-control" placeholder="0708898845">
       </div>
+
+      <div class="form-group">
+        <label for="amount">Email (Optional)</label>
+        <input required type="text" name="email" id="email" class="form-control" placeholder="johndoe@gmail.com">
+      </div>
     <button type="submit" class="start-payment-button btn btn-primary">Pay Now</button>
   </form>
 </div>
